# garrysmod_common

./: .gitignore  .gitmodules  CMakeLists.txt  azure-pipelines.yml  readme.md
cmake/: CMakeLists.txt  FindDetouring.cmake  FindScanning.cmake  FindSourceSDK.cmake  autoinstall.cmake  set_gmod_suffix_prefix.cmake
helpers/: CMakeLists.txt
helpers_extended/: CMakeLists.txt
lua_shared/: CMakeLists.txt
premake/: generator.lua
